[TEAMS-3404] Implement Dotenv for .env config
Support for .env file was added in place of *.properties files. Dockerfile and docker-compose files were removed to align it with architectural decisions

Approved-by: Luca Gasparini
